Edited the default controller to run required methods.
